[gd_scene load_steps=14 format=4 uid="uid://b7a5kqanlxmid"]

[ext_resource type="Script" uid="uid://457sykiu4ioa" path="res://scripts/Mapas/sala_faimisson.gd" id="1_4yy4k"]
[ext_resource type="Texture2D" uid="uid://bw63bniu48i6r" path="res://assets/Cenario/Sala/parede_madeira_frente.png" id="1_81uey"]
[ext_resource type="PackedScene" uid="uid://d0d3ltflnild1" path="res://scenes/Entidades/Player/player.tscn" id="2_28b2l"]
[ext_resource type="Texture2D" uid="uid://dvvn0vukv56i" path="res://assets/Cenario/Sala/parede_lados_cima.png" id="2_towr7"]
[ext_resource type="Texture2D" uid="uid://mytv0gjymvg0" path="res://assets/Cenario/Sala/piso15x15.png" id="3_we6tv"]
[ext_resource type="Texture2D" uid="uid://c75sr3nx5ed7n" path="res://assets/Cenario/Sala/parede_madeira_frente_rodape.png" id="4_0ry6v"]
[ext_resource type="PackedScene" uid="uid://dpm6regsguk6c" path="res://scenes/Transitions/Fade_Transition.tscn" id="7_n8c8v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_towr7"]
texture = ExtResource("1_81uey")
texture_region_size = Vector2i(15, 15)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.5, -7.5, -7.5, 7.5, 7.5, 7.5, 7.5, -7.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_we6tv"]
texture = ExtResource("2_towr7")
texture_region_size = Vector2i(15, 15)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.5, 7.5, -7.5, -7.5, 7.5, -7.5, 7.5, 7.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mty8n"]
texture = ExtResource("3_we6tv")
texture_region_size = Vector2i(15, 15)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8c0d8"]
texture = ExtResource("4_0ry6v")
texture_region_size = Vector2i(15, 15)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_we6tv"]
tile_size = Vector2i(15, 15)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_towr7")
sources/1 = SubResource("TileSetAtlasSource_we6tv")
sources/3 = SubResource("TileSetAtlasSource_mty8n")
sources/4 = SubResource("TileSetAtlasSource_8c0d8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8c8v"]
size = Vector2(50.5, 185.5)

[node name="Sala_Faimisson" type="Node2D"]
script = ExtResource("1_4yy4k")

[node name="Sala" type="TileMapLayer" parent="."]
texture_filter = 2
position = Vector2(0, -93.99999)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAABAAAABAAAAAAAAAACAAAABAAAAAAAAAADAAAABAAAAAAAAAAEAAAABAAAAAAAAAAFAAAABAAAAAAAAAAGAAAABAAAAAAAAAAHAAAABAAAAAAAAAAIAAAABAAAAAAAAAAJAAAABAAAAAAAAAAKAAAABAAAAAAAAAALAAAABAAAAAAAAAAMAAAABAAAAAAAAAANAAAABAAAAAAAAAAOAAAABAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAABAP3/AQAAAAAAAAACAP3/AQAAAAAAAAADAP3/AQAAAAAAAAAEAP3/AQAAAAAAAAAFAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAIAP3/AQAAAAAAAAAJAP3/AQAAAAAAAAAKAP3/AQAAAAAAAAALAP3/AQAAAAAAAAAMAP3/AQAAAAAAAAANAP3/AQAAAAAAAAAOAP3/AQAAAAAAAAAPAP3/AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAALAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAANAAkAAQAAAAAAAAAOAAkAAQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAEAAYAAwAAAAAAAAAEAAUAAwAAAAAAAAAEAAQAAwAAAAAAAAAEAAMAAwAAAAAAAAAEAAIAAwAAAAAAAAAEAAEAAwAAAAAAAAADAAEAAwAAAAAAAAACAAEAAwAAAAAAAAABAAEAAwAAAAAAAAABAAIAAwAAAAAAAAABAAMAAwAAAAAAAAABAAQAAwAAAAAAAAABAAUAAwAAAAAAAAABAAYAAwAAAAAAAAABAAcAAwAAAAAAAAABAAgAAwAAAAAAAAACAAgAAwAAAAAAAAACAAcAAwAAAAAAAAACAAYAAwAAAAAAAAACAAUAAwAAAAAAAAACAAQAAwAAAAAAAAACAAMAAwAAAAAAAAACAAIAAwAAAAAAAAADAAIAAwAAAAAAAAADAAMAAwAAAAAAAAADAAQAAwAAAAAAAAADAAUAAwAAAAAAAAADAAYAAwAAAAAAAAADAAcAAwAAAAAAAAADAAgAAwAAAAAAAAAEAAgAAwAAAAAAAAAEAAcAAwAAAAAAAAAFAAcAAwAAAAAAAAAFAAYAAwAAAAAAAAAFAAUAAwAAAAAAAAAFAAQAAwAAAAAAAAAFAAMAAwAAAAAAAAAFAAIAAwAAAAAAAAAFAAEAAwAAAAAAAAAGAAEAAwAAAAAAAAAGAAIAAwAAAAAAAAAGAAMAAwAAAAAAAAAGAAQAAwAAAAAAAAAGAAUAAwAAAAAAAAAGAAYAAwAAAAAAAAAGAAcAAwAAAAAAAAAGAAgAAwAAAAAAAAAFAAgAAwAAAAAAAAAHAAgAAwAAAAAAAAAHAAcAAwAAAAAAAAAHAAYAAwAAAAAAAAAHAAUAAwAAAAAAAAAHAAQAAwAAAAAAAAAHAAMAAwAAAAAAAAAHAAIAAwAAAAAAAAAHAAEAAwAAAAAAAAAIAAEAAwAAAAAAAAAIAAIAAwAAAAAAAAAIAAMAAwAAAAAAAAAIAAQAAwAAAAAAAAAIAAUAAwAAAAAAAAAIAAYAAwAAAAAAAAAIAAcAAwAAAAAAAAAIAAgAAwAAAAAAAAAJAAgAAwAAAAAAAAAJAAcAAwAAAAAAAAAJAAYAAwAAAAAAAAAJAAUAAwAAAAAAAAAJAAQAAwAAAAAAAAAJAAMAAwAAAAAAAAAJAAIAAwAAAAAAAAAJAAEAAwAAAAAAAAAKAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAKAAMAAwAAAAAAAAAKAAQAAwAAAAAAAAAKAAUAAwAAAAAAAAAKAAYAAwAAAAAAAAAKAAcAAwAAAAAAAAAKAAgAAwAAAAAAAAALAAgAAwAAAAAAAAALAAcAAwAAAAAAAAALAAYAAwAAAAAAAAALAAUAAwAAAAAAAAALAAQAAwAAAAAAAAALAAMAAwAAAAAAAAALAAIAAwAAAAAAAAALAAEAAwAAAAAAAAAMAAEAAwAAAAAAAAAMAAIAAwAAAAAAAAAMAAMAAwAAAAAAAAAMAAQAAwAAAAAAAAAMAAUAAwAAAAAAAAAMAAYAAwAAAAAAAAAMAAcAAwAAAAAAAAAMAAgAAwAAAAAAAAANAAgAAwAAAAAAAAANAAcAAwAAAAAAAAANAAYAAwAAAAAAAAANAAUAAwAAAAAAAAANAAQAAwAAAAAAAAANAAMAAwAAAAAAAAANAAIAAwAAAAAAAAANAAEAAwAAAAAAAAAOAAEAAwAAAAAAAAAOAAIAAwAAAAAAAAAOAAMAAwAAAAAAAAAOAAQAAwAAAAAAAAAOAAUAAwAAAAAAAAAOAAYAAwAAAAAAAAAOAAcAAwAAAAAAAAAOAAgAAwAAAAAAAAD//wMAAQAAAAAAAAD//wIAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAIAAwAAAAAAAAAAAAEAAwAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAMAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_we6tv")

[node name="Player" parent="." instance=ExtResource("2_28b2l")]
position = Vector2(59, 66)
up_direction = Vector2(0, 1)

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(-16, 62)
shape = SubResource("RectangleShape2D_n8c8v")

[node name="Fade_Transition" parent="." instance=ExtResource("7_n8c8v")]
visible = false

[node name="Timer" type="Timer" parent="Fade_Transition"]

[connection signal="body_entered" from="Exit" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Fade_Transition/Timer" to="." method="_on_timer_timeout"]
